--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,8 +44,27 @@
  * GENERAL
  */
 
-img {max-width:100;}
+img {max-width:75%;
+ padding: auto;
+ }
 
 body {
     transition: opacity .25s ease;
 }
+
+.name{
+text-decoration: underline; 
+
+}
+
+.left{
+    margin-left: 50px;
+    margin-top: 40px;
+}
+
+
+
+
+
+
+
