--- a/templates/leftside.html
+++ b/templates/leftside.html
@@ -2,9 +2,22 @@
     <img class="avatar" src="<%=avatar_url%>">
     <h3 class="name"> <%=name%> </h3>
     <h4 style="color: grey">Nicole Cano</h4>
-    <h6 class="location">Houston, TX</h6>
-    <h6> blog:
-        <a href=" <%=blog%>">medium.com/@Arbolkiri</a>
-    </h6>
 
+
+    <ul class= "vcard">
+    <li class="location">Houston, TX </li>
+    <li class="blog"> blog:
+        <a href=" <%=blog%>">medium.com/@Arbolkiri</a>
+    </li>
+    <li class = "joined"> Joined on Dec 19, 2014 </li>
+    </ul>
+
+   <div class = "vcard-stats">
+    
+    <a class ="vcard-stat" href=""<%=following_url%>"">
+    <strong class="vcard-stat-count">3</strong>
+    <span class="following">Following</span>
+    </a>
+    
+    </div>
 
