--- a/templates/rightside.html
+++ b/templates/rightside.html
@@ -1,7 +1,6 @@
-<!-- <div class="right"> -->
+
     
-    <h6> <%= repos_url %> </h6>
-<!-- </div> -->
+   <h4> <ul class="repos"> <a href="<%= html_url %>"> <%= name %> </a> </ul></h4>
 
 
-        
+
